[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/img/sprites/VFX/dustCloudVFX.png" type="Texture" id=1]
[ext_resource path="res://assets/Scripts/Sounds/CharacterSounds.gd" type="Script" id=2]
[ext_resource path="res://assets/img/sprites/VFX/enemyMeleeHittedVFX.png" type="Texture" id=3]
[ext_resource path="res://assets/img/sprites/enemy/bosses/kornus_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://assets/Scripts/AI/kronusBoss3.gd" type="Script" id=7]
[ext_resource path="res://scenes/pg/bosses/props/TheGun/BulletRifle.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/img/UI/bosses/boss kronus/3 fase vita kronus.png" type="Texture" id=9]
[ext_resource path="res://assets/Scripts/UI/HealthDisplay.gd" type="Script" id=10]
[ext_resource path="res://assets/img/UI/bosses/boss kronus/3 fase cornice kronus.png" type="Texture" id=11]
[ext_resource path="res://scenes/pg/bosses/props/Kronus/Lava Column.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=24]
resource_name = "chase"
length = 1.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "KronusMove"
} ]
}

[sub_resource type="Animation" id=21]
resource_name = "died"
length = 1.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 34, 33, 32 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "KronusDeath03"
} ]
}

[sub_resource type="Animation" id=22]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 19, 18 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Audio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "KronusPain"
} ]
}

[sub_resource type="Animation" id=23]
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=25]
resource_name = "lavastomp"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "KronusStomp"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "punch"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 31, 30, 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "KronusAttack"
} ]
}

[sub_resource type="Animation" id=26]
resource_name = "shotgun"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 27, 26, 25 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "KronusShotgun"
} ]
}

[sub_resource type="CapsuleShape2D" id=28]
radius = 19.0
height = 66.0

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 8.4275, 52 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 38.0066, 6 )

[node name="kronusBoss3" type="KinematicBody2D" groups=["enemy", "pausable"]]
z_index = -1
collision_layer = 4
collision_mask = 5
script = ExtResource( 7 )
move_speed = 100
hp = 20
range_chase = 200.0
bullet = ExtResource( 8 )
lava_column = ExtResource( 12 )

[node name="Audio" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 5 )
flip_h = true
hframes = 4
vframes = 9
frame = 25
region_rect = Rect2( 9, 14, 63, 96 )

[node name="Node2D" type="Node2D" parent="."]

[node name="meleeHittedVFX" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( -2.64833, -7.35167 )
scale = Vector2( 0.22974, 0.22974 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="dustCloudVFX" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( 15, 60 )
scale = Vector2( 0.809896, 1 )
texture = ExtResource( 1 )
hframes = 5
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/chase = SubResource( 24 )
anims/died = SubResource( 21 )
anims/hit = SubResource( 22 )
anims/idle = SubResource( 23 )
anims/lavastomp = SubResource( 25 )
anims/punch = SubResource( 20 )
anims/shotgun = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 28 )

[node name="Cooldown" type="Timer" parent="."]
autostart = true

[node name="Pivot" type="Node2D" parent="."]
scale = Vector2( -1, 1 )

[node name="HitBox" type="Area2D" parent="Pivot"]
position = Vector2( -8.5, 0 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitBox"]
position = Vector2( 0, 1.90735e-06 )
shape = SubResource( 27 )

[node name="AttackCollision" type="Area2D" parent="Pivot"]
position = Vector2( 12.3744, 0 )
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackCollision"]
position = Vector2( 33.6256, 0 )
scale = Vector2( 0.600001, 1 )
shape = SubResource( 8 )

[node name="PositionRifle" type="Position2D" parent="Pivot"]
position = Vector2( 88, -19 )

[node name="HealthDisplay" type="Node2D" parent="."]

[node name="HealthBar" type="TextureProgress" parent="HealthDisplay"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 3.0
value = 3.0

[node name="Label" type="Label" parent="HealthDisplay"]
margin_left = -20.1815
margin_top = -77.7829
margin_right = 19.8185
margin_bottom = -63.7829

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthContainer" type="Node2D" parent="UI"]
position = Vector2( 2472, 968 )
script = ExtResource( 10 )

[node name="TheLeg1" type="Sprite" parent="UI/HealthContainer"]
position = Vector2( -989, 0.241399 )
scale = Vector2( 0.50778, 0.548868 )
texture = ExtResource( 11 )

[node name="HealthBar" type="TextureProgress" parent="UI/HealthContainer"]
margin_left = -1324.0
margin_top = -19.0
margin_right = -656.0
margin_bottom = 47.0
max_value = 20.0
value = 20.0
texture_progress = ExtResource( 9 )
nine_patch_stretch = true

[node name="LavaColumnContainer" type="Node" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="area_entered" from="Pivot/HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="Pivot/AttackCollision" to="." method="_on_AttackCollision_area_entered"]
[connection signal="area_exited" from="Pivot/AttackCollision" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
